fix: add borders to make all bars align

--- a/my-page-app/src/components/hyttebooking/month-overview/components/month-calendar/calendar-cell/booking-bar/BookingBar.module.css
+++ b/my-page-app/src/components/hyttebooking/month-overview/components/month-calendar/calendar-cell/booking-bar/BookingBar.module.css
@@ -13,10 +13,14 @@
 
 .bookingBarMine {
   background-color: #5bceae;
+  border-color: #5bceae;
+  border-width: 6px 0;
 }
 
 .bookingBarTheirs {
   background-color: #2b809b;
+  border-color: #2b809b;
+  border-width: 6px 0;
 }
 
 .bookingBarTrain {
